--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Mano del Artesano Gestion Turnos Principal</string>
+    <string name="app_name">Mano Admin</string>
     <string name="text_recuperar_contrasena">Recuperar Contraseña</string>
 </resources>
